# camel-code-raisim-cpp-cha

./: CMakeLists.txt  README.md
include/: CAMELThread.h  CanMotorX8Pro.h  Controller.h  Operation.h  Simulation.h  SimulationThread.cpp  SimulationThread.h
include/CAMEL/: Controller.h  Operation.h  Robot.h  Simulation.h
include/CAN/: CanMotorX8Pro.h  CanMotorX8ProV2.h
include/Optimizer/: GradientDescentOptimizer.cpp  GradientDescentOptimizer.h
include/RT/: rb_utils.cpp  rb_utils.h
include/Sensor/: LoadCell.cpp  LoadCell.h
include/SimulationUI/: simulationMainwindow.cpp  simulationMainwindow.h  ui_simulationMainwindow.h
include/TrajectoryGenerator/: CubicTrajectoryGenerator.cpp  CubicTrajectoryGenerator.h  QuinticTrajectoryGenerator.cpp  QuinticTrajectoryGenerator.h
rsc/: camel_single_leg_urdf.urdf  test_planar_elbow_2dof.urdf  test_planar_elbow_2dof_point_mass.urdf
rsc/camel_single_leg/: badukie.urdf  camel_single_leg.urdf
rsc/camel_wire_arm/: camel_wire_arm.urdf  camel_wire_arm1.urdf
src/A1/: A1JointPDController.cpp  A1JointPDController.h  A1Robot.cpp  A1Robot.h  A1Simulation.cpp  A1Simulation.h
src/CAMEL-Quad-SingleLeg/: SingleLeggedIDController.cpp  SingleLeggedIDController.h  SingleLeggedMPCController.cpp  SingleLeggedMPCController.h  SingleLeggedPDController.cpp  SingleLeggedPDController.h  SingleLeggedRobot.cpp  SingleLeggedRobot.h  SingleLeggedSimulation.cpp  SingleLeggedSimulation.h
src/CAMEL-Quad-SingleLeg-DBI/: SingleLeggedIDController.h  SingleLeggedPDController.h  SingleLeggedRobot.cpp  SingleLeggedRobot.h  SingleLeggedSimulation.cpp  SingleLeggedSimulation.h
src/CAMEL-Quad-SingleLeg-Operation/: SingleLegCAN.cpp  SingleLegCAN.h  SingleLeggedIDControllerOperation.cpp  SingleLeggedIDControllerOperation.h  SingleLeggedOperation.cpp  SingleLeggedOperation.h  SingleLeggedPDControllerOperation.cpp  SingleLeggedPDControllerOperation.h  SingleLeggedRobotOperation.cpp  SingleLeggedRobotOperation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/CAMEL-Wire-Arm/: SingleLeggedIDController.h  SingleLeggedMPCController.cpp  SingleLeggedMPCController.h  SingleLeggedPDController.cpp  SingleLeggedPDController.h  SingleLeggedRobot.cpp  SingleLeggedRobot.h  SingleLeggedSimulation.cpp
src/RMDX8PRO/: RMDX8ProOperation.cpp  RMDX8ProOperation.h  RMDX8ProPDController.h  RMDX8ProRobot.h  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
src/SimplePendulum/: SimplePendulumPDController.cpp  SimplePendulumPDController.h  SimplePendulumRobot.cpp  SimplePendulumRobot.h  SimplePendulumSimulation.cpp  SimplePendulumSimulation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/Test/: Test_GradientDescentOptimizer.cpp  Test_RMDX8Pro.cpp  Test_RealTimeThread.cpp  Test_SensorLoadCell.cpp  Test_test.cpp  Test_trajectoryGenerator.cpp  Test_urdf.cpp  Test_wiredrivenArm.cpp
src/Test_UI/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h  ui_mainwindow.h
